Fix map height going off bottom of page and adding scrollbars

--- a/htdocs/styles/src/application.css
+++ b/htdocs/styles/src/application.css
@@ -51,7 +51,6 @@ body {
     right: 0;
     top: 50px;
     bottom: 0;
-    height: 100%;
 }
 
 .mapLabels {
